# lastdays-skill

./: .env.example  .gitignore  DESIGN-tier-fallback.md  IMPROVEMENT_BACKLOG.md  LICENSE  README.md  README.zh-CN.md  install.sh  pyproject.toml
.claude-plugin/: plugin.json
agents/: openai.yaml
docs/: demand-mining-brief.md
skills/demandmine/: SKILL.md
skills/lastdays/: SKILL.md
skills/lastdays/references/: source-policy.md  synthesis-rules.md
skills/lastdays/scripts/: lastdays.py
skills/lastdays/scripts/lib/: __init__.py  cache.py  dates.py  demand.py  demandmine.py  env.py  http.py  normalize.py  providers.py  registry.py  render.py  schema.py  score.py  script_detect.py  tiers.py
skills/lastdays/scripts/lib/sources/: __init__.py  arxiv.py  base.py  bilibili.py  bluesky.py  devto.py  douyin.py  github.py  googlenews.py  hackernews.py  kalshi.py  lemmy.py  lobsters.py  polymarket.py  reddit.py  stackexchange.py  weibo.py  xiaohongshu.py  zhihu.py
tests/: conftest.py  test_adaptive_gate.py  test_arxiv.py  test_bilibili.py  test_bluesky.py  test_cache.py  test_dates.py  test_dedupe.py  test_demand.py  test_demandmine.py  test_devto.py  test_douyin.py  test_edge_cases.py  test_github.py  test_googlenews.py  test_hackernews.py  test_kalshi.py  test_lemmy.py  test_lobsters.py  test_normalize.py  test_orchestration.py  test_polymarket.py  test_reddit_hn.py  test_registry.py  test_relevance_gate.py  test_render_weak.py  test_schema.py  test_score.py  test_script_detect.py  test_sources_smoke.py  test_stackexchange.py  test_tiers.py  test_xiaohongshu.py
